<resources>
    <string name="app_name">relativeLayout</string>
    <string name="judul">PT XYZ</string>
    <string name="alamat">Sleman</string>
    <string name="informasi">Informasi perubahan data katalog</string>
    <string name="katalog_tender">Katalog Tender</string>
    <string name="tender_tersimpan">Tender Tersimpan</string>
    <string name="laporan_setaistik">Laporan Setatistik</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pembaruan">Pembaruan terakhir:</string>
    <string name="pembaruan_selanjutnya">Pembaruan selanjutnya:</string>
    <string name="pembaruan_terakhir">16-06-2022 15:00:01</string>
    <string name="pembaruan_selanjutnyaaaa">17-06-2022 15:00:01</string>
</resources>